@@ -1,3 +1,8 @@
+2011-06-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCMain.c:
+	  Disable labelIfx() optimization when using --nolabelopt.
+
 2011-06-22 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/ds390/ralloc.c(packRegsDPTRnuse): fixed bug 1665511
